<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/progressContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/containerPilihAnak"
        android:layout_marginTop="?actionBarSize">

        <ProgressBar
            android:id="@+id/step"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="3dp"
            android:progress="100" />

        <ImageView
            android:id="@+id/lima_puluh_persen"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/step_active"
            android:visibility="visible" />

    </RelativeLayout>

    <TextView
        android:id="@+id/keteranganStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/langkah_3"
        android:textColor="@color/colorPrimaryDark" />


    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keteranganStep"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/id_kia_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:enabled="false"
                        android:hint="@string/id_kia"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/id_ibu_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:enabled="false"
                        android:hint="@string/id_ibu"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/id_anak_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:hint="@string/id_anak"
                        android:inputType="numberDecimal"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/nama_anak_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:hint="@string/nama_anak"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/tempat_lahir_anak_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:hint="@string/tempat_lahir"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tanggal_lahir_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tgl_lahir" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/tanggal_lahir_anak_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/pickTanggalLahirAnak"
                        android:layout_alignParentLeft="true"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/pickTanggalLahirAnak"
                        android:enabled="false"
                        android:singleLine="true" />

                    <ImageButton
                        android:id="@+id/pickTanggalLahirAnak"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/ic_today" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/alamat_anak_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:hint="@string/alamat" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/rt_anak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:gravity="center"
                            android:hint="@string/rt"
                            android:inputType="number"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/rw_anak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:gravity="center"
                            android:hint="@string/rw"
                            android:inputType="number"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desa" />

                <Spinner
                    android:id="@+id/dusun_anak_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/bpjs_anak_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:hint="@string/no_bpjs"
                        android:inputType="number"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>