<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/progressContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize">

        <ProgressBar
            android:id="@+id/step"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="3dp"
            android:progress="50" />

        <ImageView
            android:id="@+id/lima_puluh_persen"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_centerInParent="true"
            android:background="@drawable/step_active"
            android:visibility="visible" />

    </RelativeLayout>

    <TextView
        android:id="@+id/keteranganStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/langkah_2"
        android:textColor="@color/colorPrimaryDark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keteranganStep">

        <ScrollView
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/id_kia_value_ibu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:enabled="false"
                            android:hint="@string/id_kia"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textColor="@color/colorAccent" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/id_ibu_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:hint="@string/id_ibu"
                            android:inputType="number"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/nama_ibu_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:hint="@string/nama_ibu"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/tempat_lahir_ibu_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:hint="@string/tempat_lahir"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tanggal_lahir_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tgl_lahir" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/tanggal_lahir_ibu_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/pickTanggalLahirIbu"
                            android:layout_alignParentLeft="true"
                            android:layout_marginRight="10dp"
                            android:layout_toLeftOf="@+id/pickTanggalLahirIbu"
                            android:enabled="false"
                            android:maxLines="1" />

                        <ImageButton
                            android:id="@+id/pickTanggalLahirIbu"
                            style="?android:buttonBarButtonStyle"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentRight="true"
                            android:src="@mipmap/ic_today" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/alamat_ibu_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:hint="@string/alamat" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/rt_ibu"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="2"
                                android:gravity="center"
                                android:hint="@string/rt"
                                android:inputType="number"
                                android:maxLines="1" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/rw_ibu"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="2"
                                android:gravity="center"
                                android:hint="@string/rw"
                                android:inputType="number"
                                android:maxLines="1" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desa" />

                    <Spinner
                        android:id="@+id/dusun_ibu_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/pekerjaan_ibu_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:hint="@string/pekerjaan"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/bpjs_ibu_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:hint="@string/no_bpjs"
                            android:inputType="number"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pendidikan" />

                    <Spinner
                        android:id="@+id/pendidikan_terakhir_ibu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:maxLines="1" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>